infra/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pokemon-app
  labels:
    app.kubernetes.io/name: pokemon-app
    app.kubernetes.io/environment: production
