infra/k8s/05-web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-web-svc
  namespace: pokemon-app
  labels:
    app: pokemon-web
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 80
      name: http
  selector:
    app: pokemon-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-web
  namespace: pokemon-app
  labels:
    app: pokemon-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pokemon-web
  template:
    metadata:
      labels:
        app: pokemon-web
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: pokemon-web:1.2.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
