infra/k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokemon-ingress
  namespace: pokemon-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Rutas API (Backend)
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pokemon-api-svc
                port:
                  number: 5000
          - path: /pokemons/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pokemon-api-svc
                port:
                  number: 5000
          # Ruta Frontend Web (SPA)
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pokemon-web-svc
                port:
                  number: 80
